@startuml
enum ShapeType{
    + CIRCLE, RECTANGLE, TRIANGLE
}
class Shape{
    - String brush, paper, frame
    + String draw()
}
class Rectangle{
    + String draw()
}
class Triangle{
    + String draw()
}
class Circle{
    + String draw()
}
class ShapFactory{
    + Shape createShape(ShapeType shapetype)
}

Shape <-- Rectangle
Shape <-- Triangle
Shape <-- Circle
Shape <.. ShapFactory
@enduml